--- a/codeception.yml
+++ b/codeception.yml
@@ -8,29 +8,11 @@ paths:
 settings:
     memory_limit: 1024M
     colors: true
-modules:
-    config:
-        Yii2:
-            configFile: 'config/test.php'
-
-# To enable code coverage:
-#coverage:
-#    #c3_url: http://localhost:8080/index-test.php/
-#    enabled: true
-#    #remote: true
-#    #remote_config: '../codeception.yml'
-#    whitelist:
-#        include:
-#            - models/*
-#            - controllers/*
-#            - commands/*
-#            - mail/*
-#    blacklist:
-#        include:
-#            - assets/*
-#            - config/*
-#            - runtime/*
-#            - vendor/*
-#            - views/*
-#            - web/*
-#            - tests/*
+coverage:
+    enabled: true
+    show_uncovered: false
+    include:
+        - src/*
+    exclude:
+        - vendor/*
+        - tests/*
