--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,11 @@
     "smoren/extended-exceptions": "^1.0"
   },
   "require-dev": {
-    "codeception/codeception": "^4.0",
-    "codeception/module-asserts": "^1.3"
+    "codeception/codeception": "^4.2.1",
+    "codeception/module-asserts": "^2.0",
+    "php-coveralls/php-coveralls": "^2.0",
+    "squizlabs/php_codesniffer": "3.*",
+    "phpstan/phpstan": "^1.8"
   },
   "autoload": {
     "psr-4": {
@@ -34,5 +37,15 @@
       "type": "composer",
       "url": "https://asset-packagist.org"
     }
-  ]
+  ],
+  "scripts": {
+    "test-init": ["./vendor/bin/codecept build"],
+    "test-all": ["composer test-coverage", "composer codesniffer", "composer stan"],
+    "test": ["./vendor/bin/codecept run unit tests/unit"],
+    "test-coverage": ["./vendor/bin/codecept run unit tests/unit --coverage"],
+    "test-coverage-html": ["./vendor/bin/codecept run unit tests/unit --coverage-html"],
+    "test-coverage-xml": ["./vendor/bin/codecept run unit tests/unit --coverage-xml"],
+    "codesniffer": ["./vendor/bin/phpcs --ignore=vendor,tests --standard=tests/coding_standard.xml -s ."],
+    "stan": ["./vendor/bin/phpstan analyse -l 9 src"]
+  }
 }
