--- a/.github/workflows/test_master.yml
+++ b/.github/workflows/test_master.yml
@@ -1,4 +1,4 @@
-name: Tests and static analysis (Master)
+name: build
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: ['7.4', '8.0', '8.1']
+        php: ['7.4', '8.0', '8.1', '8.2', '8.3']
 
     steps:
       - name: Set up PHP
